# Sparkle_Meeting

rs_spkmeeting/: .gitignore  README.md  package-lock.json  package.json
rs_spkmeeting/src/: App.vue
rs_spkmeeting/src-tauri/: Cargo.toml  tauri.conf.json
rs_spkmeeting/src-tauri/src/: config.rs  lib.rs  main.rs  media.rs  network.rs  screen_capture.rs
rs_spkmeeting/src/components/: TauriCallView.css  TauriCallView.vue
rs_spkmeeting/src/router/: index.ts
rs_spkmeeting/src/styles/: global.css  settings.css
rs_spkmeeting/src/views/: SettingsView.vue
rs_spkmeeting_server/: Cargo.toml  config.yaml  go.mod  go.sum  main.go
rs_spkmeeting_server/config/: config.go  logging.toml  security.toml  server.toml
rs_spkmeeting_server/model/: message.go
rs_spkmeeting_server/room/: manager.go  member.go  room.go
rs_spkmeeting_server/router/: router.go
rs_spkmeeting_server/src/: main.rs  routes.rs  state.rs  ws.rs  ws_text.rs
rs_spkmeeting_server/src/config/: logging.rs  mod.rs  security.rs  server.rs
rs_spkmeeting_server/webrtc/: sfu.go  signal.go
