[package]
name = "rs_spkmeet_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-web-actors = "4.3"
actix = "0.13"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tokio = { version = "1.40", features = ["full"] }
num_cpus = "1.16"
config = "0.14"
anyhow = "1.0"
toml = "0.8"
dashmap = "6.1"
