[package]
name = "rs_spkmeeting"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_spkmeeting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 屏幕捕获和媒体处理
windows-capture = { version = "1.3", optional = true }
captur = "0.1"
scrap = "0.5"

# WebSocket 和网络
tokio-tungstenite = "0.24"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

windows = { version = "0.56", features = [
    "Devices_Enumeration",
    "Media_Devices",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem"
] }
